2007-07-01  Takashi Hiromatsu  <matsuan@ca2.so-net.ne.jp>

	* sb-sourceforge-jp.el (shimbun-sourceforge-jp-mailing-lists): Replace
	macemacsjp-dev with ntemacsjp-users.

2007-06-29  YOSIDA Kozi  <kozi.yosida@nifty.ne.jp>

	* sb-nifty-forum.el: Remove.

2007-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Add komimi group.

2007-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Simplify the ways to
	prepare articles in editorial and tenjin groups.

2007-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-subgroups-alist): Fix typo in urls.
	(shimbun-mainichi-prepare-article): Remove ruby for maishou subgroup.

2007-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-japanese-hankaku-region): Fix indentation.

2007-06-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp-content-start):
	Relaxed.

	* sb-cnet-jp.el (shimbun-cnet-jp-content-end): Relaxed.
	(shimbun-clear-contents): Updated.

2007-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-article-1): Bind w3m-current-url to the url that
	is to be retrieved for the default value used when it is not specified
	in the meta tag; bind w3m-use-refresh to t.

2007-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-article-1): New function to support refresh.
	(shimbun-article): Use it.

	* sb-itmedia.el (shimbun-get-headers): Remove.

2007-05-02  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* sb-engadget-ja.el (shimbun-engadget-ja-content-end): Add new regexp.

2007-04-27  Naohiro Aota  <nao.aota@gmail.com>

	* sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist): Follow the
	change of news group name and URL.

2007-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-rss.el (shimbun-rss-get-headers): Support japanese-hankaku.

	* shimbun.el (shimbun-headers, shimbun-clear-contents): Simplify a bit.